# mangrove

./: .drone.yml  .gitignore  CONTIRBUTING.md  Cargo.toml  README.md  brand.txt  db
book-backup/: SUMMARY.md
book-backup/cli/: locking_packages.md
book-backup/dev/: creating-repositories.md
book-backup/internals/: branchleaf.md  pkgspec.md  trustcache.md
book-backup/pkg/: index.md
doc/: book.toml
doc/man/: mgve.8  mgve.8.md
doc/src/: SUMMARY.md  about.md  internals.md
doc/src/cli/: install.md
doc/src/dev/: packaging-guidelines
doc/src/internals/: pkg.md  repositories.md  signed_pkg.md  transactions.md  windows.md
doc/src/pkg/: blah.md  index.md  signed.md
doc/src/repo/: index.md
doc/theme/: book.js  highlight.css  index.hbs
doc/theme/css/: variables.css
docs/docs/: conf.py
docs/docs/_build/doctrees/: environment.pickle  index.doctree  internals.doctree  pkg.doctree
docs/docs/_build/doctrees/internals/: pkg.doctree  signed_pkg.doctree  transactions.doctree  windows.doctree
docs/docs/_build/html/: .buildinfo  genindex.html  index.html  internals.html  objects.inv  pkg.html  search.html  searchindex.js
docs/docs/_build/html/_sources/: index.rst.txt  internals.rst.txt  pkg.rst.txt
docs/docs/_build/html/_sources/internals/: pkg.rst.txt  signed_pkg.rst.txt  transactions.rst.txt
docs/docs/_build/html/internals/: pkg.html  signed_pkg.html  transactions.html  windows.html
docs/docs/internals/: pkg.rst  transactions.rst  windows.rst
ideas/: deps.py
libmangrove/: Cargo.toml  build.rs  db  trust.toml
libmangrove/src/: aes.rs  config.rs  crypt.rs  db.rs  file.rs  lib.rs  lock.rs  pkg.rs  pkgdb.rs  pkginfo.rs  platform.rs  repo.rs  stropt.rs  test.rs  trustcache.rs
mangrove-cli/: Cargo.toml
mangrove-cli/mangrove-create/: Cargo.toml
mangrove-cli/mangrove-create/src/: build.rs  cli.rs  main.rs  mgvetoml.rs
mangrove-cli/mangrove-inspect/: Cargo.toml
mangrove-cli/mangrove-inspect/src/: cli.rs  main.rs
mangrove-cli/src/: cli.rs  create.rs  inspect.rs  install.rs  main.rs  mgvetoml.rs  repogen.rs  reportbug.rs  sign.rs  trust.rs  util.rs
src/: main.rs
src/mangrove/: mod.rs  pkg.rs  platform.rs  test.rs  version.rs
test/: README.txt  hash.txt  test_pkginfo  test_pkginfo_nonsense
test/package-installation/hello_world/: helloworld
test/repo-test/: db  trust.toml
test/src-pkg/: .mgve.toml  test_0.0.1_amd64.mgve  trust.toml
test/src-pkg/root/hello_world/: helloworld
test/src-pkg/test/: pkginfo
test/test-package/: test_0.0.1_amd64.mgve
test/test-package-signed/: test_0.0.1_amd64.mgve
test/test-package-signed-nonsense/validation/: pkginfo
test/test-package-signed/validation/: test_0.0.1_amd64.mgve
