[package]
name = "libmangrove"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "*"
version = { version = "1.0.7", features = ["serde"], package="semver" }
k256 = "0.10.4"
rand = "0.8.5"
sha2 = "0.10.2"
hex = "0.4.3"
uuid = { version = "0.8.2", features = ["v4"] }