[package]
name = "libmangrove"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "*"
version = { version = "1.0.7", features = ["serde"], package="semver" }
rand = { version = "0.8.5", features = ["std_rng"] }
rand_dalek = { version = "0.7.3", package = "rand" }
sha2 = "0.10.2"
hex = "0.4.3"
tar = "0.4.38"
uuid = { version = "1.0.0", features = ["v4"] }
zstd = "0.11.1"
aes = "0.8.1"
arrayref = "0.3.6"
serial_test = "0.6.0"

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]