[package]
name = "libmangrove"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "*"
version = { version = "1.0.7", features = ["serde"], package="semver" }
rand = { version = "0.8.5", features = ["std_rng"] }
rand_dalek = { version = "0.7.3", package = "rand" }
sha2 = "0.10.2"
hex = "0.4.3"
tar = "0.4.38"
uuid = { version = "1.0.0", features = ["v4"] }
zstd = "0.11.1"
aes = "0.8.1"
arrayref = "0.3.6"
lockfile = "0.4.0"
base64 = "0.13.0"
toml = "0.5.9"
git-version = "0.3.5"
url = { version = "2", features = ["serde"] }
log = "0.4.17"
file-owner = "0.1.1"
filetime = "0.2.18"

[dev-dependencies]
simple_logger = "2.3.0"
serial_test = "0.9.0"

[build-dependencies]
build-data = "0.1.3"

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]

[features]
enable_huge_tests = []