[package]
name = "mangrove-cli"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mgve"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.20", features = ["derive", "cargo", "suggestions"] }
libmangrove = { version = "0.2", path = "../libmangrove" }
colored = "2.0.0"
serde = { version = "1.0.144", features = ["derive"] }
version = { version = "1.0.7", features = ["serde"], package="semver" }
toml = "0.5.9"
human_bytes = { version = "0.3", features = ["bibytes"] }
tabwriter = "1.2.1"
simple_logger = "2.3.0"
rmp-serde = "1.1.0"
url = "2.3.1"
serde_json = "1.0.85"