[package]
name = "mangrove-create"
version = "0.1.0"
authors = ["c0repwn3r"]
edition = "2021"
description = "Create and build packages for the Mangrove package manager"
documentation = "https://docs.mgve.cc/cli/mangrove-create"
repository = "https//mgve.cc/git"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmangrove = { version = "0.1.0", path = "../../libmangrove/", package = "libmangrove" }
clap = { version = "3.1.10", features = ["derive", "cargo", "suggestions"] }
clap_complete = "3.1.2"
toml = "0.5.9"
version = { version = "1.0.7", features = ["serde"], package="semver" }