[package]
name = "mangrove-inspect"
version = "0.1.0"
authors = ["c0repwn3r"]
edition = "2021"
description = "Inspect a Mangrove package and get information about it"
documentation = "https://docs.mgve.cc/cli/mangrove-inspect"
repository = "https//mgve.cc/git"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmangrove = { version = "0.1.0", path = "../../libmangrove/", package = "libmangrove" }
clap = { version = "3.2.20", features = ["derive", "cargo", "suggestions"] }
clap_complete = "3.1.2"